# polymarket-execution-engine

./: .env.example  .env.profiles.example  .env.runtime.example  .env.runtime.secrets.example  .env.validation.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
adapters/pmx-official-sdk-adapter/: Cargo.toml
adapters/pmx-official-sdk-adapter/src/: gates.rs  hash.rs  lib.rs  lifecycle.rs  liveness.rs  mapping.rs  model.rs  real_funds_canary_cli.rs  redaction.rs  sdk_runtime.rs  standard_sign_only.rs  tests.rs
adapters/pmx-official-sdk-adapter/src/gates/: canary.rs  live.rs  real_funds.rs  smoke.rs
adapters/pmx-official-sdk-adapter/src/gates/canary/: defaults.rs  prep.rs  validation.rs
adapters/pmx-official-sdk-adapter/src/liveness/: error_normalization.rs
adapters/pmx-official-sdk-adapter/src/mapping/: normalization.rs  validation.rs
adapters/pmx-official-sdk-adapter/src/model/: canary.rs  config.rs  constants.rs  credentials.rs  error.rs  liveness.rs  order.rs  real_funds.rs  sdk_error.rs  sign_only.rs  smoke.rs
adapters/pmx-official-sdk-adapter/src/sdk_runtime/: authenticated.rs  gateway.rs  live_canary.rs  shared.rs  sign_only.rs  signature_type.rs
adapters/pmx-official-sdk-adapter/src/sdk_runtime/sign_only/: discover.rs  dry_run.rs  parsing.rs
adapters/pmx-official-sdk-adapter/src/tests/: canary.rs  feature_gated.rs  liveness_errors.rs  mapping.rs  real_funds.rs  sign_only.rs
config/: controlled-canary.dual-control-review.schema.json  controlled-canary.external-references.example.json  controlled-canary.external-references.invalid-sensitive.fixture.json  controlled-canary.external-references.template.json  controlled-canary.release-decision.example.json  controlled-canary.release-decision.invalid-mismatched.fixture.json  controlled-canary.release-decision.invalid-partial.fixture.json  controlled-canary.release-decision.invalid-status.fixture.json  controlled-canary.release-decision.schema.json  controlled-canary.release-decision.template.json  controlled-canary.runtime-truth.invalid-partial.fixture.json  controlled-canary.runtime-truth.invalid-sensitive.fixture.json  controlled-canary.runtime-truth.template.json  production-preflight.example.json  (+7 more)
(+571 files in other folders)
