[package]
name = "pmx-official-sdk-adapter"
version = "0.26.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"

[features]
default = []
sdk-typecheck = ["dep:polymarket_client_sdk_v2"]
authenticated-smoke = ["sdk-typecheck", "dep:tokio", "dep:anyhow"]
sign-only-dry-run = ["sdk-typecheck", "dep:tokio", "dep:anyhow"]
live-submit = ["sdk-typecheck", "dep:tokio", "dep:anyhow"]

[[bin]]
name = "pmx-real-funds-canary"
path = "src/bin/pmx-real-funds-canary.rs"
required-features = ["live-submit"]

[[bin]]
name = "pmx-query-order"
path = "src/bin/pmx-query-order.rs"
required-features = ["live-submit"]

[[bin]]
name = "pmx-query-trades"
path = "src/bin/pmx-query-trades.rs"
required-features = ["live-submit"]

[dependencies]
pmx-core = { path = "../../crates/pmx-core" }
pmx-gateway = { path = "../../crates/pmx-gateway" }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
chrono = { version = "0.4.44", features = ["serde"] }
polymarket_client_sdk_v2 = { version = "=0.6.0-canary.1", features = ["clob", "tracing", "ws", "heartbeats"], optional = true }
anyhow = { version = "1.0.102", optional = true }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"], optional = true }

[workspace]
